# tm-python

./: .gitignore  LICENSE  Makefile  README.md  _wrapper_init_block.py.in  pyproject.toml
openapi/: codegen-config.yaml
tests/: test_client.py
trafficmorph/: __init__.py  sdk.py
trafficmorph/api/captures/: analyse.py  import_capture.py
trafficmorph/api/domains/: add.py  list_domains.py  remove.py  verify_dns.py  verify_http.py
trafficmorph/api/history/: get_history_item.py  list_history.py
trafficmorph/api/profiles/: create_profile.py  delete_profile.py  get_profile.py  list_profiles.py  update_profile.py
trafficmorph/api/runs/: pause.py  resume.py  start.py  stop.py
trafficmorph/api/variables_sets/: change_mode.py  create.py  delete.py  get.py  list_variables_sets.py  rename.py
trafficmorph/models/: __init__.py  add_domain_request.py  analyse_body.py  api_profile_request.py  api_profile_response.py  capture_analysis_response.py  capture_import_result.py  change_variables_set_mode_request.py  change_variables_set_mode_request_mode.py  create_variables_set_request.py  create_variables_set_request_mode.py  created_profile.py  curve_point.py  group.py  import_capture_body.py  rename_variables_set_request.py  schedule_block.py  scheduled_run_response.py  skipped_selection.py  slot_input.py  slot_response.py  stats.py  traffic_profile_point_request.py  traffic_profile_point_response.py  traffic_profile_summary_response.py  traffic_run_control_response.py  variable.py  variables_set_response.py  variables_set_response_mode.py  verified_domain_response.py
